infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: arnavchhabra/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-custom-ip
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      targetPort: 5173
      port: 5173
