infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: arnavchhabra/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-custom-ip
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      targetPort: 3001
      port: 3001
