infra/k8s/comment-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  type: NodePort
  selector:
    app: comments #  name of container running inside some pod
  ports:
    - name: comments
      protocol: TCP
      port: 3001 # Port that should be exposed on the Node on which pod is running
      targetPort: 3001 # Port that should be exposed on which actual container is running
