infra/k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: event-bus #  name of container running inside some pod
  ports:
    - name: event-bus
      protocol: TCP
      port: 3005 # Port that should be exposed on the Node on which pod is running
      targetPort: 3005 # Port that should be exposed on which actual container is running
