infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: arnavchhabra/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-custom-ip
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      targetPort: 3003
      port: 3003
