infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: posts #  name of container running inside some pod
  ports:
    - name: posts
      protocol: TCP
      port: 3000 # Port that should be exposed on the Node on which pod is running
      targetPort: 3000 # Port that should be exposed on which actual container is running
