infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: arnavchhabra/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-custom-ip
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      targetPort: 3002
      port: 3002
