infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query #  name of container running inside some pod
  ports:
    - name: query
      protocol: TCP
      port: 3002 # Port that should be exposed on the Node on which pod is running
      targetPort: 3002 # Port that should be exposed on which actual container is running
