infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: post-srv
                port:
                  number: 3000
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3002
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3002
          - path: /posts/?(.*)/comment
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-custom-ip
                port:
                  number: 5173
